packages/pulse-core/force-app/main/default/objects/Workflow_Tool_Registration__mdt/fields/Default_HITL_Policy__c.field-meta.xml
<CustomField>
    <fullName>Default_HITL_Policy__c</fullName>
    <label>Default HITL Policy</label>
    <type>Text</type>
    <length>40</length>
</CustomField>