packages/pulse-core/force-app/main/default/objects/Workflow_Tool_Registration__mdt/fields/Input_Schema_JSON__c.field-meta.xml
<CustomField>
    <fullName>Input_Schema_JSON__c</fullName>
    <label>Input Schema JSON</label>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>