packages/pulse-core/force-app/main/default/objects/Workflow_Tool_Registration__mdt/fields/Required_Permissions__c.field-meta.xml
<CustomField>
    <fullName>Required_Permissions__c</fullName>
    <label>Required Permissions</label>
    <type>Text</type>
    <length>255</length>
</CustomField>